# DRUM-SAMPLER-2.0

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  ERROR_REPORTING_SYSTEM.md  IMPLEMENTATION_STATUS.md  KOMBAI_HANDOFF.md  LICENSE  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  PHASE6_COMPLETE.md  README.md  RELEASE_CHECKLIST.md  USER_MANUAL.md
DrumSampler2_Package/: INSTALLATION.md  README.txt
DrumSampler2_Package/Documentation/: RELEASE_CHECKLIST.md  USER_MANUAL.md
DrumSampler2_Package/VST3/Drum Sampler 2.vst3/Contents/Resources/: moduleinfo.json
DrumSampler2_Package/VST3/Drum Sampler 2.vst3/Contents/_CodeSignature/: CodeResources
Resources/Icons/: create_icons.py
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SamplerEngine.cpp  SamplerEngine.h
Source/Core/: DebugConsole.h  ErrorLogger.h  MicBusLayout.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h  StateManager.cpp  StateManager.h
Source/Effects/: CompressorEffect.cpp  CompressorEffect.h  DelayEffect.cpp  DelayEffect.h  EQEffect.cpp  EQEffect.h  EffectProcessor.cpp  EffectProcessor.h  ParametricEQEffect.cpp  ParametricEQEffect.h  PluginManager.cpp  PluginManager.h  ReverbEffect.cpp  ReverbEffect.h  ThirdPartyPluginEffect.cpp  ThirdPartyPluginEffect.h  TransientShaperEffect.cpp  TransientShaperEffect.h
Source/Grooves/: GrooveLibrary.cpp  GrooveLibrary.h  GrooveTimeline.cpp  GrooveTimeline.h  MIDIPlayer.cpp  MIDIPlayer.h  RhythmMatcher.cpp  RhythmMatcher.h
Source/Mixer/: BusManager.cpp  BusManager.h  MixerChannel.cpp  MixerChannel.h  MixerUI.cpp  MixerUI.h  SendFXBus.cpp  SendFXBus.h
Source/Routing/: AudioBus.cpp  AudioBus.h  RoutingMatrix.cpp  RoutingMatrix.h
Source/Sampler/: DrumVoice.cpp  DrumVoice.h  SampleManager.cpp  SampleManager.h  SamplerEngine.cpp  SamplerEngine.h  VelocityCurve.cpp  VelocityCurve.h
Source/Sequencer/: StepPattern.h  StepSequencer.cpp  StepSequencer.h
Source/Testing/: PerformanceMonitor.h  TestSuite.h
Source/Trigger/: AudioTriggerEngine.cpp  AudioTriggerEngine.h  DrumClassifier.cpp  DrumClassifier.h  OnsetDetector.cpp  OnsetDetector.h  TriggerUI.cpp  TriggerUI.h
Source/UI/: AnalogKnob.cpp  AnalogKnob.h  ChannelStrip.cpp  ChannelStrip.h  DRUM SAMPLER 2.0.code-workspace  DrumKitView.cpp  DrumKitView.h  DrumTechLookAndFeel.cpp  DrumTechLookAndFeel.h  FrequencyBandEditor.cpp  FrequencyBandEditor.h  GrooveBrowser.cpp  GrooveBrowser.h  GrooveTimeline.cpp  GrooveTimeline.h  InstrumentSettingsPanel.cpp  InstrumentSettingsPanel.h  InteractiveDrumPad.cpp  InteractiveDrumPad.h  KeyboardShortcuts.h  MixerView.cpp  MixerView.h  ParametricEQWindow.cpp  ParametricEQWindow.h  PluginBrowser.cpp  PluginBrowser.h  PluginColors.h  RoutingView.cpp  RoutingView.h  SettingsView.cpp  SettingsView.h  ThemeManager.h  TooltipManager.h  TransportBar.cpp  TransportBar.h  TriggerView.h  VUMeter.cpp  VUMeter.h
docs/: ARCHITECTURE.md  BUILD.md  PACK_NAMING_CONVENTIONS.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  UI_KIT_PAGE_AUDIT_AND_STRATEGY.md  V1_KNOWN_LIMITATIONS.md  V1_QA_CHECKLIST.md  V1_SCOPE_CONTRACT.md
